[tool.poetry]
name = "go"
version = "0.1.0"
description = ""
authors = ["Shinuk Yi <wook3024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
opencv-python = "^4.6.0.66"
python-multipart = "^0.0.5"
celery = "^5.2.7"
alive-progress = "^2.4.1"
pytest = "^7.1.3"
flower = "^1.2.0"
redis = "^4.3.4"
orjson = "^3.8.0"
httpx = "^0.23.0"
pillow = "^9.2.0"
elasticsearch = "^8.4.3"
requests = "^2.28.1"
ray = "1.9.1"
protobuf = "3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

